spaces between stanzas

--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
             <p class="line" onclick="showAnnotation('line19', this)">With the voices singing in our ears, saying</p>
             <p class="line" onclick="showAnnotation('line20', this)">That this was all folly.</p>
 
+<br><br> <!-- Add this to create space between stanzas -->
+            
             <p class="line" onclick="showAnnotation('line21', this)">Then at dawn we came down to a temperate valley,</p>
             <p class="line" onclick="showAnnotation('line22', this)">Wet, below the snow line, smelling of vegetation;</p>
             <p class="line" onclick="showAnnotation('line23', this)">With a running stream and a water-mill beating the darkness,</p>
@@ -221,6 +223,8 @@
             <p class="line" onclick="showAnnotation('line30', this)">And arriving at evening, not a moment too soon</p>
             <p class="line" onclick="showAnnotation('line31', this)">Finding the place; it was (you might say) satisfactory.</p>
 
+<br><br> <!-- Add this to create space between stanzas -->
+            
             <p class="line" onclick="showAnnotation('line32', this)">All this was a long time ago, I remember,</p>
             <p class="line" onclick="showAnnotation('line33', this)">And I would do it again, but set down</p>
             <p class="line" onclick="showAnnotation('line34', this)">This set down</p>
